add some code in script

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
        <select id="city">
         <option value="">Select a city..</option>
         <option value="current">My current location</option>
+        <option value="Ethiopia/Addis Ababa">Addis Ababa</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="Pacific/Auckland">Auckland</option>
@@ -38,7 +39,7 @@
         </div>
       </div>
     </div>
-    
+
     <footer>
       This project was coded with ❤️ by Meklit Anteneh and is
       <a href="https://github.com/maki21-me/World_Clock.git" target="_blank">
